# sentinel-gateway

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  QUICKSTART.md  README.md  docker-compose.yml  events.jsonl
.claude/skills/architecture-agent/: SKILL.md
.claude/skills/implementation-agent/: SKILL.md
.claude/skills/requirements-agent/: SKILL.md
.github/workflows/: ci.yml
.openclaw/skills/architecture-agent/: SKILL.md
.openclaw/skills/orchestrator/: SKILL.md
.openclaw/skills/review-agent/: SKILL.md
.openclaw/skills/verification-agent/: SKILL.md
build-sil/: events.jsonl  mcu-sim  sentinel-gw
cmake/: arm-linux-gnueabihf.cmake  arm-none-eabi-qemu.cmake  arm-none-eabi.cmake
config/: arm-none-eabi.cmake  version.h.in
docker/: .gitkeep  Dockerfile.analysis  Dockerfile.build-linux  Dockerfile.build-mcu  Dockerfile.build-mcu-qemu  Dockerfile.qemu-sil  Dockerfile.sil
docs/architecture/diagrams/: actuator_safety_flow.drawio  ci_pipeline.drawio  comm_stack.drawio  data_flow.puml  diag_client_state.drawio  linux_components.puml  linux_process_arch.drawio  mcu_components.puml  mcu_init_sequence.drawio  mcu_memory_map.drawio  repo_structure.drawio  sensor_data_flow.drawio  sequence_config.drawio  sequence_failsafe.drawio  sequence_normal.drawio  sil_test_harness.drawio  system_context.puml  system_decomposition.drawio  wire_frame_format.drawio  yocto_layer_structure.drawio
docs/architecture/software/: SWAD.md
docs/architecture/system/: SAD.md
docs/design/: build_environment.md  build_system_spec.md  sil_environment.md
docs/design/detailed/: linux_actuator_proxy.md  linux_config_manager.md  linux_diagnostics.md  linux_gateway_core.md  linux_health_monitor.md  linux_protobuf_handler.md  linux_sensor_proxy.md  mcu_actuator_control.md  mcu_communication_manager.md  mcu_config_store.md  mcu_main_loop.md  mcu_protobuf_handler.md  mcu_safety_monitor.md  mcu_sensor_acquisition.md  mcu_watchdog_manager.md
docs/design/interface_specs/: interfaces.md
docs/guides/: sil_developer_guide.md
docs/project/: change_management_plan.md  product_specification.md  project_plan.md  quality_assurance_plan.md  risk_register.md
docs/requirements/software/: SWRS.md
docs/requirements/system/: SRS.md  stakeholder_requirements.md
docs/reviews/: misra_compliance_plan.md
docs/safety/: fmea.md
docs/test/integration_test_spec/: integration_test_plan.md
docs/test/qualification_test_spec/: qualification_test_plan.md
docs/test/system_integration_test/: system_integration_test_plan.md
docs/test/system_qualification_test/: system_qualification_test_plan.md
docs/test/unit_test_spec/: unit_test_plan.md
docs/traceability/: stkh_to_sys_trace.md  swe_to_arch_trace.md  sys_to_swe_trace.md
results/qemu-sil/: qemu-sil-results.xml
src/common/: error_codes.h  sentinel_types.h  wire_frame.c  wire_frame.h
src/linux/: actuator_proxy.c  actuator_proxy.h  config_manager.c  config_manager.h  diagnostics.c  diagnostics.h  gateway_core.c  gateway_core.h  health_monitor.c  health_monitor.h  logger.c  logger.h  main.c  protobuf_lite.c  protobuf_lite.h  sensor_proxy.c  sensor_proxy.h  tcp_transport.c  tcp_transport.h
src/mcu/: actuator_control.c  actuator_control.h  config_store.c  config_store.h  health_reporter.c  health_reporter.h  main.c  mps2_an505.ld  protobuf_handler.c  protobuf_handler.h  sensor_acquisition.c  sensor_acquisition.h  startup_mps2_an505.s  startup_stm32u575.s  stm32u575.ld  tcp_stack.c  tcp_stack.h  tcp_stack_qemu.c  watchdog_mgr.c  watchdog_mgr.h
src/mcu/hal/: adc_driver.c  adc_driver.h  flash_driver.c  flash_driver.h  gpio_driver.c  gpio_driver.h  pwm_driver.c  pwm_driver.h  stm32u575.h  systick.c  systick.h  watchdog_driver.c  watchdog_driver.h
src/mcu/hal/qemu/: adc_driver_qemu.c  flash_driver_qemu.c  gpio_driver_qemu.c  hal_shim_posix.c  main_qemu.c  mps2_an505.h  pwm_driver_qemu.c  qemu_hal_shim.c  qemu_hal_shim.h  systick_qemu.c  watchdog_driver_qemu.c
src/proto/: sentinel.options  sentinel.proto
tests/: CMakeLists.txt
tests/integration/: conftest.py  sil_mcu_sim.c  test_e2e.py  test_sil.py
tests/qemu/: __init__.py  conftest.py  test_qemu_sil.py
tests/unit/: test_actuator_control.c  test_config_store.c  test_diagnostics.c  test_error_codes.c  test_health_monitor.c  test_logger.c  test_sensor_proxy.c  test_wire_frame.c
tests/unit/stubs/: actuator_proxy_stub.c  health_monitor_stub.c  pwm_driver_stub.c  pwm_stub.c  sensor_proxy_stub.c
tools/qemu/: launch_linux_gw.sh  launch_mcu_fw.sh
tools/scripts/: generate_traceability.py  setup_sil.sh
tools/yocto/meta-sentinel/conf/: layer.conf
tools/yocto/meta-sentinel/recipes-sentinel/sentinel-gw/: sentinel-gw_1.0.0.bb
tools/yocto/meta-sentinel/recipes-sentinel/sentinel-gw/files/: sentinel-gw.service
